# mikkel-og-oyvind

./: .gitignore  477631+477578_predictions.txt  477631_477578_short.ipynb  477631_long.ipynb  477631_long_mikkel.ipynb  477631_short.ipynb  README.md  catboost.ipynb  cleanup-Copy1.ipynb  cleanup-feature_eng-Copy1.ipynb  cleanup.ipynb  column_scores.csv  deeptable_out.txt  deeptables.ipynb  demo_evaluation.ipynb  explore-Copy1.ipynb  explore.ipynb  false_train_report.html  logistic_regression.ipynb  modeling.ipynb  pyproject.toml  stacking.ipynb  test_report_small.html  train_report_small.html  true_train_report.html  xgboost_test.ipynb
