[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["Øyvind Samuelsen <oyvinsam@stud.ntnu.no>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.2"
jupyterlab = "^2.2.8"
pandas_profiling = "^2.9.0"
pyarrow = "^1.0.1"
tensorflow = "^2.3.0"
deeptables = "^0.1.11"
shap = "^0.36.0"
matplotlib = "^3.3.2"
seaborn = "^0.11.0"
scikit-learn = "^0.23.2"
xgboost = "^1.2.0"
category-encoders = "2.1.0"
hyperopt = "^0.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
